--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-histogram.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-histogram.html
@@ -1,49 +1,89 @@
-<div class="row">
-    <div class="row">
-        <h5>Best Measure</h5>
-        <div class="row">
-            <div class="col-xs-3" style="overflow: auto; max-height: 300px">
-                <hot-table
-                    settings="{colHeaders: true, afterSelection: afterSelection, contextMenu: true}"
-                    rowHeaders="false"
-                    datarows="db.items">
+<div class="row" style="border-top: 1px solid black">
+    <div>
+        <div ng-switch="edit">
+            <div ng-switch-when="false">
+                <h4>{{attribute.name}}</h4>
+                <div class="row">
+                    <h5>Best Measure</h5>
+                    <div class="row">
+                        <div class="col-xs-3" style="overflow: auto; max-height: 300px">
+                            <hot-table
+                                settings="{colHeaders: true, afterSelection: afterSelection, contextMenu: true}"
+                                rowHeaders="false"
+                                datarows="db.items">
 
-                    <hot-column data="category" title="'Categories'"></hot-column>
-                    <hot-column data="value" title="'Series'"></hot-column>
-                </hot-table>
+                                <hot-column data="category" title="'Categories'"></hot-column>
+                                <hot-column data="value" title="'Series'"></hot-column>
+                            </hot-table>
+                        </div>
+                    </div>
+                    <button ng-click="afterSelectionSubmit()" class="btn btn-success">Submit values</button>
+                    <a ng-click="showChart = !showChart">show/hide chart</a>
+                    <div ng-if="showChart">
+                        <highchart config="histogramConfig"></highchart>
+                    </div>
+                </div>
+                <div class="row">
+                    <h5>Measurements</h5>
+                    <a ng-click="openAddMeasurements = !openAddMeasurements">add measurement</a>
+                    <div ng-if="openAddMeasurements">
+                        <div class="col-xs-6">
+                            <strong>Categories (one entry per line)</strong>
+                            <textarea ng-model="measurement.categories" class="col-xs-10" rows="20"></textarea>
+                        </div>
+                        <div class="col-xs-6">
+                            <strong>Values (one entry per line)</strong>
+                            <textarea ng-model="measurement.values" class="col-xs-10" rows="20"></textarea>
+                        </div>
+                        <div class="row">
+                            <button ng-click="submitMeasurement()" class="btn btn-success">Submit</button>
+                            <button ng-click="clear()" class="btn btn-danger">Clear</button>
+                            <button ng-click="viewInGraph()" class="btn btn-primary">View Graph</button>
+                        </div>
+                        <div class="row" ng-if="showMeasurementGraph">
+                            <highchart config="histogramMeasurementConfig"></highchart>
+                        </div>
+                    </div>
+                    <ul class="list-unstyled">
+                        <li ng-repeat="measure in measurements">
+                            {{meaure.process}}
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div ng-switch-default>
+                <div class="col-xs-offset-1">
+                    <div class="col-xs-4">
+                        <ul class="list-inline" style="padding-top: 10px;">
+                            <li>
+                                <a ng-click="showBestMeasure = !showBestMeasure">view raw</a>
+                            </li>
+                            <li>
+                                <a>add measurement</a>
+                            </li>
+                        </ul>
+                        <div class="row" ng-if="showBestMeasure">
+                            <h5>Best Measure</h5>
+                            <div class="row">
+                                <div class="col-xs-10" style="overflow: auto; max-height: 300px">
+                                    <hot-table
+                                        settings="{colHeaders: true, afterSelection: afterSelection, contextMenu: true}"
+                                        rowHeaders="false"
+                                        datarows="db.items">
+
+                                        <hot-column data="category" title="'Categories'"></hot-column>
+                                        <hot-column data="value" title="'Series'"></hot-column>
+                                    </hot-table>
+                                </div>
+                            </div>
+                            <a ng-click="afterSelectionSubmit()">Graph selected</a>
+                        </div>
+                    </div>
+                    <div class="col-xs-7">
+                        <highchart config="histogramConfig"></highchart>
+                    </div>
+                </div>
             </div>
         </div>
-        <button ng-click="afterSelectionSubmit()" class="btn btn-success">Submit values</button>
-        <a ng-click="showChart = !showChart">show/hide chart</a>
-        <div ng-if="showChart">
-            <highchart config="histogramConfig"></highchart>
-        </div>
-    </div>
-    <div class="row">
-        <h5>Measurements</h5>
-        <a ng-click="openAddMeasurements = !openAddMeasurements">add measurement</a>
-        <div ng-if="openAddMeasurements">
-            <div class="col-xs-6">
-                <strong>Categories (one entry per line)</strong>
-                <textarea ng-model="measurement.categories" class="col-xs-10" rows="20"></textarea>
-            </div>
-            <div class="col-xs-6">
-                <strong>Values (one entry per line)</strong>
-                <textarea ng-model="measurement.values" class="col-xs-10" rows="20"></textarea>
-            </div>
-            <div class="row">
-                <button ng-click="submitMeasurement()" class="btn btn-success">Submit</button>
-                <button ng-click="clear()" class="btn btn-danger">Clear</button>
-                <button ng-click="viewInGraph()" class="btn btn-primary">View Graph</button>
-            </div>
-            <div class="row" ng-if="showMeasurementGraph">
-                <highchart config="histogramMeasurementConfig"></highchart>
-            </div>
-        </div>
-        <ul class="list-unstyled">
-            <li ng-repeat="measure in measurements">
-                {{meaure.process}}
-            </li>
-        </ul>
     </div>
 </div>
