Rework how we display the properties and how people search for properties to enter.   - Added a sidebar with the sections, categories and attributes for a   template.   - Click on an entry in the sidebar to edit that attribute or section.   - Allow graph to be hidden to increase the space for attributes. This   is important for the charts.
Charts don't resize themselves when I adjust the column sizes. It might
be better to have adding properties be a separate page that doesn't show
the chart. This would also open more space up for adding measurements.

--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-sample.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-sample.html
@@ -76,13 +76,13 @@
                      class="panel panel-default">
                     <div class="panel-body">
                         <span class="pull-left"
-                              style="font-size: 12px; font-weight: 700; color: #959595; letter-spacing:1px"> {{sample.name}}</span>
+                              style="font-size: 12px; font-weight: 700; color: #959595; letter-spacing:1px"> {{::sample.name}}</span>
                         <br>
                         <dl class="dl-horizontal">
                             <dt>Description</dt>
-                            <dd>{{sample.description}}</dd>
+                            <dd>{{::sample.description}}</dd>
                             <dt>From</dt>
-                            <dd>{{sample.from}}</dd>
+                            <dd>{{::sample.from}}</dd>
                         </dl>
                         <a ng-click="editEntry($index)">edit</done>
                     </div>
