--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-string.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-string.html
@@ -2,7 +2,7 @@
     <div ng-switch="edit">
         <div ng-switch-when="true">
             <label class="col-xs-3 control-label" for="stringInput">
-                {{attribute.name}}
+                {{::attribute.name}}
                 <i ng-if="attribute.required"
                    class="fa fa-fw fa-asterisk text-danger"></i>
             </label>
@@ -14,16 +14,16 @@
                        ng-required="attribute.required"
                        ng-model="attribute.value">
                 <span ng-show="form.stringInput.$error.required" class="text-danger">
-                    You must supply a {{attribute.name}}.
+                    You must supply a {{::attribute.name}}.
                 </span>
                 <span class="help-block">
-                    {{attribute.description}}
+                    {{::attribute.description}}
                 </span>
             </div>
         </div>
         <div ng-switch-default>
-            <dt>{{attribute.name}}</dt>
-            <dd>{{attribute.value}}</dd>
+            <dt>{{::attribute.name}}</dt>
+            <dd>{{::attribute.value}}</dd>
         </div>
     </div>
 </div>
