--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-date.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-date.html
@@ -2,7 +2,7 @@
     <div ng-switch="control.edit">
         <div ng-switch-when="true">
             <label class="col-xs-3 control-label" for="dateInput">
-                {{attribute.name}}
+                {{::attribute.name}}
                 <i ng-if="attribute.required"
                    class="fa fa-fw fa-asterisk text-danger"></i>
             </label>
@@ -28,16 +28,16 @@
                 </p>
                 <span ng-show="form.dateInput.$error.required"
                       class="text-danger">
-                    You must supply a {{attribute.name}}.
+                    You must supply a {{::attribute.name}}.
                 </span>
                 <span class="help-block">
-                    {{attribute.description}}
+                    {{::attribute.description}}
                 </span>
             </div>
         </div>
         <div ng-switch-default>
-            <dt>{{attribute.name}}</dt>
-            <dd>{{attribute.value | date:'fullDate'}}</dd>
+            <dt>{{::attribute.name}}</dt>
+            <dd>{{::attribute.value | date:'fullDate'}}</dd>
         </div>
     </div>
 </div>
