--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-line.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-line.html
@@ -42,7 +42,7 @@
         </div>
         <ul class="list-unstyled">
             <li ng-repeat="measure in measurements">
-                {{meaure.process}}
+                {{::meaure.process}}
             </li>
         </ul>
     </div>
