--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-number.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-number.html
@@ -3,7 +3,7 @@
          ng-switch="control.edit">
         <div ng-switch-when="true">
             <label class="col-xs-3 control-label" for="numberInput">
-                {{attribute.name}}
+                {{::attribute.name}}
                 <i ng-if="attribute.required"
                    class="fa fa-fw fa-asterisk text-danger"></i>
             </label>
@@ -16,22 +16,22 @@
                            ng-required="attribute.required"
                            ng-model="attribute.value">
                 </div>
-                <span ng-if="attribute.unit !== ''">{{attribute.unit}}</span>
+                <span ng-if="attribute.unit !== ''">{{::attribute.unit}}</span>
                 <span ng-show="form.numberInput.$error.required"
                       class="text-danger">
-                    You must supply a {{attribute.name}}
+                    You must supply a {{::attribute.name}}
                 </span>
                 <span class="help-block">
-                    {{attribute.description}}
+                    {{::attribute.description}}
                 </span>
             </div>
         </div>
         <div ng-switch-default>
-            <dt>{{attribute.name}}</dt>
+            <dt>{{::attribute.name}}</dt>
             <dd>
                 <span ng-if="attribute.value">
-                    {{attribute.value}}
-                    <span ng-if="attribute.unit !== ''">{{attribute.unit}}</span>
+                    {{::attribute.value}}
+                    <span ng-if="attribute.unit !== ''">{{::attribute.unit}}</span>
                 </span>
             </dd>
         </div>
