--- a/website/app/application/core/components/templates/partials/sections/template-section-category.html
+++ b/website/app/application/core/components/templates/partials/sections/template-section-category.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>{{category.category}}</h4>
+    <h4>{{::category.category}}</h4>
     <div ng-if="category.attributes.length > 7" class="row">
         <input type="text" ng-model="searchInput.name" class="col-xs-12"
                placeholder="Search attributes...">
