--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -2293,3 +2293,7 @@ textarea.no-resize {
 .main-wrapper{
   margin-left: -300px;
 }
+
+.modal.fade .modal-dialog {
+  transform: translate(0,0);
+}
