--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-histogram.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-histogram.html
@@ -52,36 +52,40 @@
                 </div>
             </div>
             <div ng-switch-default>
-                <div class="col-xs-offset-1">
-                    <div class="col-xs-4">
-                        <ul class="list-inline" style="padding-top: 10px;">
-                            <li>
-                                <a ng-click="showBestMeasure = !showBestMeasure">view raw</a>
-                            </li>
-                            <li>
-                                <a>add measurement</a>
-                            </li>
-                        </ul>
-                        <div class="row" ng-if="showBestMeasure">
-                            <h5>Best Measure</h5>
-                            <div class="row">
-                                <div class="col-xs-10" style="overflow: auto; max-height: 300px">
-                                    <hot-table
-                                        settings="{colHeaders: true, afterSelection: afterSelection, contextMenu: true}"
-                                        rowHeaders="false"
-                                        datarows="db.items">
+                <div class="row">
+                    <ul class="list-inline" style="padding-top: 10px;">
+                        <li>
+                            <a ng-click="showBestMeasure = !showBestMeasure">view raw</a>
+                        </li>
+                        <li>
+                            <a ng-click="addMeasurement()">add measurement</a>
+                        </li>
+                        <li>
+                            <a ng-click="showHistory = !showHistory">view measure history</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="row" ng-if="showBestMeasure">
+                    <h5>Best Measure</h5>
+                    <div class="row">
+                        <div class="col-xs-10" style="overflow: auto; max-height: 300px">
+                            <hot-table
+                                settings="{colHeaders: true, afterSelection: afterSelection, contextMenu: true}"
+                                rowHeaders="false"
+                                datarows="db.items">
 
-                                        <hot-column data="category" title="'Categories'"></hot-column>
-                                        <hot-column data="value" title="'Series'"></hot-column>
-                                    </hot-table>
-                                </div>
-                            </div>
-                            <a ng-click="afterSelectionSubmit()">Graph selected</a>
+                                <hot-column data="category" title="'Categories'"></hot-column>
+                                <hot-column data="value" title="'Series'"></hot-column>
+                            </hot-table>
                         </div>
                     </div>
-                    <div class="col-xs-7">
-                        <highchart config="histogramConfig"></highchart>
-                    </div>
+                    <a ng-click="afterSelectionSubmit()">Graph selected</a>
+                </div>
+                <div class="row" ng-if="showHistory">
+                    Show best measure history here.
+                </div>
+                <div class="row">
+                    <highchart config="histogramConfig"></highchart>
                 </div>
             </div>
         </div>
