--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1305,15 +1305,7 @@ ul.projects-header {
 }
 
 hr {
-  background: #333;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  border: 0;
-  height: 1px;
-  background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
-  background-image: -moz-linear-gradient(left, #ccc, #333, #ccc);
-  background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
-  background-image: -o-linear-gradient(left, #ccc, #333, #ccc);
+  border-color: #d3d3d3;
 }
 
 hr.carved {
