commit home page update

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -431,7 +431,7 @@ td.tag-width {
 
 .navbar-custom {
   /* background-color: #4e869f; */
-  background-color: #006489;
+  background-color: #45707D;
   color: #ffffff;
   border-radius: 0;
   padding-top: 0px;
