--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -487,11 +487,21 @@ td.tag-width {
 }
 
 ul.taskbar.nav li a:hover,
-a:focus {
+ul.taskbar.nav li a:focus {
   font-weight: normal;
   background-color: #f5f5f5;
   color: #7990a3;
   border-bottom: 1px solid #518394;
+}
+
+ul.taskbar.nav li.projects-drop-down a:hover,
+ul.taskbar.nav li.projects-drop-down a:focus {
+  font-weight: normal;
+  /* background-color: #f5f5f5; */
+  background-color: #45707D;
+  color: #fff;
+  border: 0;
+  border-top: 1px solid #518394;
 }
 
 .active-project {
@@ -898,10 +908,10 @@ h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .taskbar.nav-tabs > li.active > a, .taskbar.nav-tabs > li.active > a:hover, .taskbar.nav-tabs > li.active > a:focus {
-  background-color: #F5F5F5;
-  color: #7990a3;
-  border-bottom: 1px solid #F5F5F5;
-}
+                                                                              background-color: #F5F5F5;
+                                                                              color: #7990a3;
+                                                                              border-bottom: 1px solid #F5F5F5;
+                                                                            }
 
 .home-list li.list-group-item:hover {
   background-color: #eeeeee;
@@ -2201,14 +2211,14 @@ textarea.no-resize {
 }
 
 .tree li button, .tree li button:active, .tree li button:focus {
-  text-decoration: none;
-  color: #369;
-  border: none;
-  background: transparent;
-  margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
-  outline: 0;
-}
+                                           text-decoration: none;
+                                           color: #369;
+                                           border: none;
+                                           background: transparent;
+                                           margin: 0px 0px 0px 0px;
+                                           padding: 0px 0px 0px 0px;
+                                           outline: 0;
+                                         }
 
 .active-file {
   background-color: #d3d3d3;
@@ -2325,6 +2335,12 @@ header {
   border: 1px solid #e7e7e7;
 }
 
+.details-container.processes-container .navbar-default .navbar-nav > li.active > a {
+  color: #3A9EE3;
+  background-color: #FFFFFF;
+  border-bottom: 5px solid #3A9EE3;
+}
+
 .details-sidebar .list-group {
   margin-right: 15px;
   margin-left: 15px;
@@ -2370,6 +2386,17 @@ header {
 
 .btn-review {
   background-color: #FDB600;
+  color: #ffffff;
+  border: none;
+  border-radius: 0px;
+  font-weight: bold;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-transform: uppercase;
+}
+
+.btn-process {
+  background-color: #3A9EE3;
   color: #ffffff;
   border: none;
   border-radius: 0px;
