--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -2170,3 +2170,54 @@ input[type="checkbox"]:focus {
 .task-bar-tool:hover {
   color: white;
 }
+
+header {
+  background: url('assets/img/splash/bg1.png');
+  background-size: cover;
+  height: 70vh;
+  margin-top: -45px;
+  background-position: 10% 60%;
+}
+
+.login-splash {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 50px;
+  width: 400px;
+  /*background-color: white;*/
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.icon-splash {
+  background-color: white;
+  height: 30vh;
+  padding-top: 70px;
+}
+.process-splash {
+  height: 100vh;
+  padding-top: 70px;
+}
+.sample-splash {
+  background-color: white;
+  height: 100vh;
+  padding-top: 70px;
+}
+.review-splash {
+  height: 100vh;
+  padding-top: 70px;
+}
+.file-splash {
+  background-color: white;
+  height: 100vh;
+  padding-top: 70px;
+}
+.note-splash {
+  height: 100vh;
+  padding-top: 70px;
+}
+.corner {
+  background-color: grey;
+  color: white;
+}
