--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -2172,7 +2172,7 @@ input[type="checkbox"]:focus {
 }
 
 header {
-  background: url('img/splash/bg1.png');
+  background: url('assets/img/splash/bg1.png');
   background-size: cover;
   height: 70vh;
   margin-top: -45px;
