--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1,8 +1,11 @@
 body {
-  font-size: 15px;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-family: roboto;
+  font-weight: 400;
+  font-style: normal;
+  /*font-weight: font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
   padding-top: 0px;
-  font-size: 13px;
+  /*font-size: 13px;*/
   overflow-y: scroll;
   overflow-x: hidden;
   /* background-color: #e9e9ea; */
@@ -385,7 +388,7 @@ span {
   color: black;
 }
 
-a.prov-link {
+a.prov- {
   padding-right: 15px;
   color: black;
 }
@@ -1166,16 +1169,16 @@ h4, .h4, h5, .h5, h6, .h6 {
   background-color: lightgreen;
 }
 
-a.action-link {
+a.action- {
   color: white;
   font-style: normal;
 }
 
-.action-link.project-sub-action {
+.action-.project-sub-action {
   font-size: 11pt;
 }
 
-.action-link-close {
+.action--close {
   position: relative;
   top: -5px;
   color: #800000;
@@ -2316,6 +2319,7 @@ header {
 .details-container .navbar-default .navbar-nav > li > a {
   font-size: 18px;
   text-transform: uppercase;
+  font-weight: 400;
   color: #979797;
   /*font-weight: bold;*/
   line-height: 28px;
@@ -2361,6 +2365,7 @@ header {
   border-right: 0;
   border-left: 0;
   border-radius: 0;
+  font-size: 16px;
 }
 
 .details-sidebar .list-group .list-group-item.active {
@@ -2391,37 +2396,46 @@ header {
 }
 
 .details-main-content .headings {
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 400;
   color: #FDB600;
-  text-transform: uppercase
+  text-transform: uppercase;
+  line-height: 24px;
 }
 
 .details-main-content .who {
   color: #919191;
-  font-weight: bold
+  font-weight: 500
 }
 
 .details-main-content .divider {
   border-top: 3px dotted #d3d3d3;
 }
 
-.details-main-content .link {
+.details-main-content .link{
   color: #64B5F6;
-  font-weight: bold;
+  font-weight: 400;
+  line-height: 20px;
+  cursor: pointer;
+}
+
+.close-link{
+  cursor: pointer;
+  color: #F4626C;
 }
 
 .btn-details-container {
   color: #ffffff;
   border: none;
   border-radius: 0px;
-  font-weight: bold;
+  font-weight: 500;
   padding-left: 30px;
   padding-right: 30px;
   text-transform: uppercase;
 }
 
 .btn-review {
-  background-color: #FDB600;
+  background-color: #FFB500;
 }
 
 .btn-process {
