update to the process details page

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -2415,6 +2415,9 @@ header {
 .file{
   color: #9782be;;
 }
+.process{
+  color: #1E88E5;;
+}
 .details-main-content .headings {
   font-size: 16px;
   font-weight: 400;
