link samples to files

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -2418,6 +2418,9 @@ header {
 .process{
   color: #1E88E5;;
 }
+.sample{
+  color: #28AA9A;;
+}
 .details-main-content .headings {
   font-size: 16px;
   font-weight: 400;
