Correct spelling mistake

--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-histogram.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-histogram.html
@@ -46,7 +46,7 @@
                     </div>
                     <ul class="list-unstyled">
                         <li ng-repeat="measure in measurements">
-                            {{meaure.process}}
+                            {{measure.process}}
                         </li>
                     </ul>
                 </div>
