--- a/website/app/application/core/components/properties/partials/display-property.html
+++ b/website/app/application/core/components/properties/partials/display-property.html
@@ -1,4 +1,4 @@
-<div ng-switch="property._type">
+<div class="row" ng-switch="property._type">
     <div ng-switch-when="number">
         <property-number property="property"></property-number>
     </div>
