--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -2349,15 +2349,13 @@ header {
 }
 
 .details-sidebar {
-  /*min-height: 550px;*/
-  /*max-height: 600px; /!*This should be true across all the detail pages*!/*/
+  min-height: 550px;
+  max-height: 600px; /*This should be true across all the detail pages*/
   overflow-y: auto;
   transition: all 0.5s ease 0s;
   z-index: 1000;
   background-color: white;
   border: 1px solid #e7e7e7;
-  margin-bottom: -600px;
-  padding-bottom: 600px;
 }
 
 .details-container.processes-container .navbar-default .navbar-nav > li.active > a {
