composition functionality and measurement view pages updated

--- a/website/app/application/core/components/properties/partials/display-property.html
+++ b/website/app/application/core/components/properties/partials/display-property.html
@@ -2,7 +2,9 @@
     <div ng-switch-when="number">
         <property-number property="property"></property-number>
     </div>
-
+    <div ng-switch-when="fraction">
+        <property-fraction property="property"></property-fraction>
+    </div>
     <div ng-switch-when="selection">
         <property-selection property="property"></property-selection>
     </div>
